Removes the pomdp from the simulation, as it's not clear what that was adding. Testing still needs to be done between this version and the original version (with POMDP) to see if it is still comparable. Also need to see that it is doing what we expect it to, in terms of the simulation domain.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ include_directories(include)
 set(CMAKE_CXX_FLAGS "-std=c++11 -g -Wall -I /usr/include/eigen3/")
 add_subdirectory(include)
 
-set( LIBS_TO_LINK Utilities Learning Domains Agents POMDPs)
+set( LIBS_TO_LINK Utilities Learning Domains Agents)
 
 add_executable(generateMultiRoverExperts generateMultiRoverExperts.cpp)
 target_link_libraries( generateMultiRoverExperts ${LIBS_TO_LINK} )
