--- a/include/Domains/CMakeLists.txt
+++ b/include/Domains/CMakeLists.txt
@@ -1,3 +1,3 @@
-set( SRCS SingleRover.cpp MAPElitesRover.cpp MultiRover.cpp)
+set( SRCS SingleRover.cpp MultiRover.cpp)
 add_library( Domains SHARED ${SRCS} )
 target_link_libraries(Domains Learning Utilities Agents Target)
