--- a/include/Learning/CMakeLists.txt
+++ b/include/Learning/CMakeLists.txt
@@ -1,3 +1,3 @@
-set( SRCS NeuralNet.cpp  NeuroEvo.cpp MAPElites.cpp)
+set( SRCS NeuralNet.cpp  NeuroEvo.cpp)
 add_library( Learning SHARED ${SRCS} )
 target_link_libraries(Learning Utilities)
