Implemented Laser Data Generation - Note: Have not verified that the laser data generated is actually correct, just on first glance the data looks reasonable - Run laser generation by  then - Currently implemented via additional functions in  and , may want to refactor in separate class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,6 @@ set( LIBS_TO_LINK Utilities Learning Domains Agents)
 
 add_executable(generateMultiRoverExperts generateMultiRoverExperts.cpp)
 target_link_libraries( generateMultiRoverExperts ${LIBS_TO_LINK} )
+
+add_executable(generateLaserData generateLaserData.cpp)
+target_link_libraries( generateLaserData ${LIBS_TO_LINK} )
